--- a/public/seamen.html
+++ b/public/seamen.html
@@ -52,7 +52,7 @@
                             <div class="row text-center">
 
                                 <div class="col-sm-4">
-                                    <img class="img-fluid img-thumbnail" src="church.PNG">
+                                    <img class="img-fluid img-thumbnail" src="public/church.PNG">
                                     <h2>The Church of Jesus Christ of Latter-day Saints</h2>
                                     <hr>
                                     <p class="lead"> Our organization has been blessed by the Mormon Community for this amazing gym which serves as our practice and scrimmage location, as well as occasional breakfasts. </p>
