--- a/public/seamen.html
+++ b/public/seamen.html
@@ -38,7 +38,7 @@
         <div class="container-fluid">
             <div class="row jumbotron" id="jumbo">
                 <div class="col-12">
-                    <h1 class="display-2"> FEAR THE SEAMEN</h1>
+                    <h1 class="display-2"> FEAR THE SEAMENS</h1>
                 </div>
                 <div class="container">
                     
