changed image names so they work

--- a/public/seamen.html
+++ b/public/seamen.html
@@ -31,9 +31,9 @@
             </div>
           </nav>
         <div class="row">
-            <div class="col-sm-4 g-0"><img class="img-fluid" src="https://mail.google.com/mail/u/0?ui=2&ik=6036a86bba&attid=0.2&permmsgid=msg-a:r2389955372930302250&th=17df9240dd98e0c7&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ-s4XRk8NNMcCC_8R1yo1zTKNei3mWPn02Nh0pKeM7D_U-x_eGKAPwiayho3k9fZXHUy_0eY_QvBCnWx0dOEr3yPJ5Shf7JHfAJGDjC8H63CU40_48beGEenag&disp=emb&realattid=17df923a81c207cf5f01"></div>
-            <div class="col-sm-4 g-0"><img class="img-fluid" src="https://mail.google.com/mail/u/0?ui=2&ik=6036a86bba&attid=0.3&permmsgid=msg-a:r2389955372930302250&th=17df9240dd98e0c7&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9jELXzUGtoOOi5auo39XUEwOhTL8tDW2niWFgRdSR2oltZSh5HPoQ-W9y5JR0G8JXvASNkRgp-nLhSYVVlmZfXRSZnQLKhfEaFvALc0qXqZQzPh6B_oj0CQio&disp=emb&realattid=17df923be8b207cf5f02"></div>
-            <div class="col-sm-4 g-0"><img class="img-fluid" src="https://mail.google.com/mail/u/0?ui=2&ik=6036a86bba&attid=0.4&permmsgid=msg-a:r2389955372930302250&th=17df9240dd98e0c7&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_b69z4Jp6JLblvWRrLY3zXSWoj2x21zoR7fOc3mt-qmw6P7fHj4aNoViRNlRF19lVPEQoqDxBd78GJJFKxOl8psR8uIhw1Xmzkdk89lDQSEKkympOdjj3ckRg&disp=emb&realattid=17df923d3aa207cf5f03"></div>
+            <div class="col-sm-4 g-0"><img class="img-fluid" src="Images/kai1.jpg"></div>
+            <div class="col-sm-4 g-0"><img class="img-fluid" src="Images/kai2.jpg"></div>
+            <div class="col-sm-4 g-0"><img class="img-fluid" src="Images/kai3.jpg"></div>
         </div>
         <div class="container-fluid">
             <div class="row jumbotron" id="jumbo">
@@ -52,7 +52,7 @@
                             <div class="row text-center">
 
                                 <div class="col-sm-4">
-                                    <img class="img-fluid img-thumbnail" src="public/church.PNG">
+                                    <img class="img-fluid img-thumbnail" src="Images/church.PNG">
                                     <h2>The Church of Jesus Christ of Latter-day Saints</h2>
                                     <hr>
                                     <p class="lead"> Our organization has been blessed by the Mormon Community for this amazing gym which serves as our practice and scrimmage location, as well as occasional breakfasts. </p>
