changed image file name to case-sensitive requiremnets

--- a/public/roster.html
+++ b/public/roster.html
@@ -38,21 +38,21 @@
          
           <div class="row text-center">
               <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/trevor.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/trevor.PNG">
                   <hr>
                   <h3 class="display 2"> Trevor Galvin</h3>
                   <p class="lead"> Trevor Galvin, who strongly believes he is the "main character" in every situation has terrible pre-game outfits which include a shocking minion constume. One of the captians, his fitness and leadership is a model to the other players. 
                   </p>
               </div>
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/evandaniel.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/evandaniel.PNG">
                 <hr>
                 <h3 class="display 2"> Evan Daniel</h3>
                 <p class="lead"> The underrated Evan Daniel has a wonderful ability to air ball wide open threes. The so called "tiktok star", one of his hobbies is reacting to girls' videos. He does however make consistent layups and does not hesitate to pass the ball. 
                 </p>
             </div>
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/andy.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/andy.PNG">
                 <hr>
                 <h3 class="display 2"> Andy Villegas</h3>
                 <p class="lead"> Andy's monster hunger will be transfered from the table to the court this season and his aggressiveness will scare any opponent. His one of a kind sweating ability is a secret weapon that the opposition is not prepared for. 
@@ -63,19 +63,19 @@
         <hr>
         <div class="row text-center">
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/eli.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/eli.PNG">
                 <hr>
                 <h3 class="display 2"> Eli Deguzman</h3>
                 <p class="lead"> The Filipino International Eli Deguzman is commonly mistaken for an "Edgar", has self proclaimed "drip", and a 1-star barber. His strong desire and defense will be an asset. </p>
             </div>
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/brady.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/brady.PNG">
                 <hr>
                 <h3 class="display 2"> Brady Cardwell</h3>
                 <p class="lead"> Brady Cardwell has a love for Among Us jokes and making public situations awkward. However, his shooting ability from the three point line is one of a kind. </p>
             </div>
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/caleb.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/caleb.PNG">
                 <hr>
                 <h3 class="display 2"> Caleb Mohrhardt</h3>
                 <p class="lead"> The football background Caleb Mohrhardt claims he has the biggest arms in Sammamish, and hopefully this will be utilized this season on the court. </p>
@@ -84,19 +84,19 @@
         <hr>
         <div class="row text-center">
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/kai.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/kai.PNG">
                 <hr>
                 <h3 class="display 2"> Kai Brown</h3>
                 <p class="lead"> A Michigan native, Kai Brown insists his expertise is in the girl-department. The Seamen Staff have their fingers crossed that his basketball performances will be more succesful than him talking to girls and his speed and vision will influence this.   </p>
             </div>
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/jimmy.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/jimmy.PNG">
                 <hr>
                 <h3 class="display 2">Jimmy Schoenleber</h3>
                 <p class="lead"> Jimmy, the well known music nerd and self-declared #1 Kayne Fan has serious issues with anger and his game on and off the court. The coaches see a coachable and passionate player in Jimmy.  </p>
             </div>
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/gavin.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/gavin.PNG">
                 <hr>
                 <h3 class="display 2"> Gavin Whitehorn</h3>
                 <p class="lead"> The JV star Gavin Whitehorn's vocabulary does not include "having fun" or "taking it easy". The competitive tryhard has wonderful handles and shooting, something the Seamen lack. 
@@ -106,19 +106,19 @@
         <hr>
         <div class="row text-center">
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/connor.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/connor.PNG">
                 <hr>
                 <h3 class="display 2">Connor Ware</h3>
                 <p class="lead">Another one of our captains, the faithful Connor Ware has a strong physical body which somehow is pushed around and bullied by players like Eli and Kai. Hopefully Connor can turn this around and be a powerful prescense this year.</p>
             </div>
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/bradyd.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/bradyd.PNG">
                 <hr>
                 <h3 class="display 2">Brady Diramio</h3>
                 <p class="lead">D-Ray, as many call him, has changed his personality to revolve around girls, which is something the Seamen coaches hope to change this year to use Brady at his best which is a scary sight. </p>
             </div>
             <div class="col-sm-4">
-                <img class="img-fluid img-thumbnail" src="images/caden.PNG">
+                <img class="img-fluid img-thumbnail" src="Images/caden.PNG">
                 <hr>
                 <h3 class="display 2">Caden Cross</h3>
                 <p class="lead">With no sense of time management and constantly showing up late, Caden has served his punishments like a man. Lacking discpline, Caden relies on his acceleration on fast-breaks and stamina. </p>
@@ -131,19 +131,19 @@
       </div>
       <div class="row text-center">
           <div class="col-sm-4">
-              <img class="img-fluid img-thumbnail" src="images/jonah.PNG">
+              <img class="img-fluid img-thumbnail" src="Images/jonah.PNG">
               <hr>
               <h3 class="display 2 ">Head Coach Jonah Park</h3>
               <p class="lead"> Jonah Park was hired by the Seamen on a record breaking contract, and there's a good reason for that. With experience in top notch programs with Assistant Bulankou at Duke and Gonzaga, Park is someone the players admire and wish to impress. His eating habits hopefully will not carry on to the players as his raging obssession with McDonalds is getting out of hand. </p>
           </div>
           <div class="col-sm-4">
-              <img class="img-fluid img-thumbnail" src="images/andrei.PNG">
+              <img class="img-fluid img-thumbnail" src="Images/andrei.PNG">
               <hr>
               <h3 class="display 2 "> Assistant Coach Andrei Bulankou</h3>
               <p class="lead"> Andrei Bulankou, a renowned international coach has experience coaching in countries like Paraguay and domestically in the Duke and Gonzaga Programs. Although he can't seem to get his love life straight, deletes snapchat every two months, has weird diets, and gets his girls stolen by players like Andy, his coaching abilities are top notch and he has developed close relationships with all the players.  </p>
           </div>
           <div class="col-sm-4">
-              <img class="img-fluid img-thumbnail" src="images/adam.PNG">
+              <img class="img-fluid img-thumbnail" src="Images/adam.PNG">
               <hr>
               <h3 class="display 2 ">Social Media Manager Adam Labbe</h3>
               <p class="lead"> Adam Labbe, the social media fanatic has developed the seamen's online influence that stretches all over the world. His camera skills and caption ideas demonstrate his pure talent. His dressing style is a concern, as multiple reports of a man wearing a "suit" with "spongebob socks" has been reported around the area which obviously has a negative look on the Seamen.</p>
@@ -151,7 +151,7 @@
       </div>
       <div class="row text-center">
           <div class="col-sm-4">
-              <img class="img-fluid img-thumbnail" src="images/jack.PNG">
+              <img class="img-fluid img-thumbnail" src="Images/jack.PNG">
               <hr>
               <h3 class="display 2 "> General Manager Jack Edmunds</h3>
               <p class="lead"> General Manager Jack Edmunds is a wealthy investor in the Seamen who handles his responsibilities quickly and properly. However, his addiction to advil and donuts is something he is looking to change. </p>
