--- a/public/roster.html
+++ b/public/roster.html
@@ -18,7 +18,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="seamen.html"  id="tag">Home Page</a>
+                <a class="nav-link" aria-current="page" href="index.html"  id="tag">Home Page</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link active" href="roster.html" id="tag"> Roster</a>
