--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sammamish Seamen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="seamen.css">
@@ -38,7 +38,7 @@
         <div class="container-fluid">
             <div class="row jumbotron" id="jumbo">
                 <div class="col-12">
-                    <h1 class="display-2"> FEAR THE SEAMENS</h1>
+                    <h1 class="display-2"> FEAR THE SEAMEN</h1>
                 </div>
                 <div class="container">
                     
